cli/tests/testdata/bench/fail.ts
Deno.bench("bench0", () => {
  throw new Error();
});
Deno.bench("bench1", () => {
  throw new Error();
});
Deno.bench("bench2", () => {
  throw new Error();
});
Deno.bench("bench3", () => {
  throw new Error();
});
Deno.bench("bench4", () => {
  throw new Error();
});
Deno.bench("bench5", () => {
  throw new Error();
});
Deno.bench("bench6", () => {
  throw new Error();
});
Deno.bench("bench7", () => {
  throw new Error();
});
Deno.bench("bench8", () => {
  throw new Error();
});
Deno.bench("bench9", () => {
  throw new Error();
});
